@@ -1,7 +1,9 @@
-/blib/
-/inc/
+/blib
+/.build
 /Makefile
+/Makefile.old
 /MANIFEST
 /MANIFEST.bak
 /META.yml
 /pm_to_blib
+/Data-Serializable-*
