@@ -1,0 +1,49 @@
+name    = Data-Serializable
+author  = Robin Smidsrød <robin@smidsrod.no>
+license = Perl_5
+copyright_holder = Robin Smidsrød
+
+;Semantic versioning, see http://semver.org/
+version = 0.40.0
+
+[NextRelease]
+[@Git]
+
+[@Filter]
+-bundle = @Basic
+-remove = Readme
+
+[MetaJSON]
+[PkgVersion]
+[PodWeaver]
+
+[MetaResources]
+repository.url  = git://github.com/robinsmidsrod/Data-Serializable.git
+repository.web  = http://github.com/robinsmidsrod/Data-Serializable
+repository.type = git
+
+[InstallGuide]
+[ReadmeFromPod]
+[ReadmeMarkdownFromPod]
+[CopyReadmeFromBuild]
+
+[PodSyntaxTests]
+[PodCoverageTests]
+[CriticTests]
+[KwaliteeTests]
+[NoTabsTests]
+
+;Makefile.PL perl_prereq emits trailing whitespace
+;[EOLTests]
+
+;Need to get my signing stuff setup properly...
+;[Signature]
+
+[AutoPrereqs]
+
+[Prereqs]
+Storable = 0
+
+[Prereqs / BuildRequires]
+JSON = 0
+Data::Serializer::JSON = 0
