@@ -1,8 +1,11 @@
-package Data::Serializable;
+use strict;
+use warnings;
 
+package Data::Serializable;
+use Moose::Role;
 use 5.006; # Found with Perl::MinimumVersion
 
-use Moose::Role;
+# ABSTRACT: Moose role that adds serialization support to any class
 
 use Class::MOP ();
 use Carp qw(croak confess);
@@ -13,45 +16,6 @@ use namespace::autoclean -also => [
     '_build_serializer',
     '_build_deserializer',
 ];
-
-=encoding utf8
-
-=head1 NAME
-
-Data::Serializable - Moose-based role that adds serialization support to any class
-
-=head1 VERSION
-
-Version 0.02
-
-=cut
-
-our $VERSION = '0.03';
-
-=head1 SYNOPSIS
-
-    package MyClass;
-    use Moose;
-    with 'Data::Serializable';
-    
-    package main;
-    my $obj = MyClass->new( serializer_module => 'JSON' );
-    my $json = $obj->serialize( "Foo" );
-    ...
-    my $str = $obj->deserialize( $json );
-
-=head1 DESCRIPTION
-
-A Moose-based role that enables the consumer to easily serialize/deserialize data structures.
-The default serializer is L<Storable>, but any serializer in the L<Data::Serializer> hierarchy can
-be used automatically. You can even install your own custom serializer if the pre-defined ones
-are not useful for you.
-
-=head1 EXPORT
-
-This is a Moose-based role. It doesn't export anything to normal perl modules.
-
-=cut
 
 sub _wrap_invalid {
     my ($module, $obj) = @_;
@@ -72,11 +36,7 @@ sub _unwrap_invalid {
     return $obj;
 }
 
-=head1 ATTRIBUTES
-
-=cut
-
-=head2 throws_exception
+=attr throws_exception
 
 Defines if methods should throw exceptions or return undef. Default is to throw exceptions.
 Override default value like this:
@@ -91,7 +51,7 @@ has 'throws_exception' => (
     default => 1,
 );
 
-=head2 serializer_module
+=attr serializer_module
 
 Name of a predefined module that you wish to use for serialization.
 Any submodule of L<Data::Serializer> is automatically supported.
@@ -105,7 +65,7 @@ has "serializer_module" => (
     default => 'Storable',
 );
 
-=head2 serializer
+=attr serializer
 
 If none of the predefined serializers work for you, you can install your own.
 This should be a code reference that takes one argument (the message to encode)
@@ -153,7 +113,7 @@ sub _build_serializer {
     confess("Unsupported serializer specified");
 }
 
-=head2 deserializer
+=attr deserializer
 
 Same as serializer, but to decode the data.
 
@@ -201,9 +161,7 @@ sub _build_deserializer {
     confess("Unsupported deserializer specified");
 }
 
-=head1 METHODS
-
-=head2 serialize($message)
+=method serialize($message)
 
 Runs the serializer on the specified argument.
 
@@ -222,7 +180,7 @@ sub serialize {
     return $serialized;
 }
 
-=head2 deserialize($message)
+=method deserialize($message)
 
 Runs the deserializer on the specified argument.
 
@@ -241,60 +199,31 @@ sub deserialize {
     return $deserialized;
 }
 
-=head1 AUTHOR
+1;
 
-Robin Smidsrød, C<< <robin at smidsrod.no> >>
+__END__
 
-=head1 BUGS
+=head1 SYNOPSIS
 
-Please report any bugs or feature requests to C<bug-data-serializable at rt.cpan.org>, or through
-the web interface at L<http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Data-Serializable>.  I will be notified, and then you'll
-automatically be notified of progress on your bug as I make changes.
+    package MyClass;
+    use Moose;
+    with 'Data::Serializable';
 
+    package main;
+    my $obj = MyClass->new( serializer_module => 'JSON' );
+    my $json = $obj->serialize( "Foo" );
+    ...
+    my $str = $obj->deserialize( $json );
 
+=head1 DESCRIPTION
 
-
-=head1 SUPPORT
-
-You can find documentation for this module with the perldoc command.
-
-    perldoc Data::Serializable
-
-
-You can also look for information at:
-
-=over 4
-
-=item * RT: CPAN's request tracker
-
-L<http://rt.cpan.org/NoAuth/Bugs.html?Dist=Data-Serializable>
-
-=item * AnnoCPAN: Annotated CPAN documentation
-
-L<http://annocpan.org/dist/Data-Serializable>
-
-=item * CPAN Ratings
-
-L<http://cpanratings.perl.org/d/Data-Serializable>
-
-=item * Search CPAN
-
-L<http://search.cpan.org/dist/Data-Serializable/>
-
-=back
-
-
-=head1 COPYRIGHT & LICENSE
-
-Copyright 2009 Robin Smidsrød
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
+A Moose-based role that enables the consumer to easily serialize/deserialize data structures.
+The default serializer is L<Storable>, but any serializer in the L<Data::Serializer> hierarchy can
+be used automatically. You can even install your own custom serializer if the pre-defined ones
+are not useful for you.
 
 =head1 SEE ALSO
 
-L<Moose::Manual::Roles>, L<Data::Serializer>
-
-=cut
-
-1; # End of Data::Serializable
+=for :list
+* L<Moose::Manual::Roles>
+* L<Data::Serializer>
