@@ -1,0 +1,31 @@
+[@CorePrep]
+
+[Name]
+[Version]
+
+[Region  / prelude]
+
+[Generic / SYNOPSIS]
+[Generic / DESCRIPTION]
+[Generic / OVERVIEW]
+
+[Collect / ATTRIBUTES]
+command = attr
+
+[Collect / METHODS]
+command = method
+
+[Collect / FUNCTIONS]
+command = func
+
+[Leftovers]
+
+[Region  / postlude]
+
+[Support]
+[Authors]
+[Legal]
+
+[-Encoding]
+[-Transformer]
+transformer = List
